compute-deployments.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: math
  labels:
    app: compute-api
    api: math
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compute-api
      api: math
  template:
    metadata:
      labels:
        app: compute-api
        api: math
    spec:
      containers:
      - name: math
        image: an5asis/math:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: plus
  labels:
    app: compute-api
    api: plus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compute-api
      api: plus
  template:
    metadata:
      labels:
        app: compute-api
        api: plus
    spec:
      containers:
      - name: plus
        image: an5asis/plus:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: minus
  labels:
    app: compute-api
    api: minus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compute-api
      api: minus
  template:
    metadata:
      labels:
        app: compute-api
        api: minus
    spec:
      containers:
      - name: compute-minus
        image: an5asis/minus:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: multiply
  labels:
    app: compute-api
    api: multiply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compute-api
      api: multiply
  template:
    metadata:
      labels:
        app: compute-api
        api: multiply
    spec:
      containers:
      - name: multiply
        image: an5asis/multiply:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: divide
  labels:
    app: compute-api
    api: divide
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compute-api
      api: divide
  template:
    metadata:
      labels:
        app: compute-api
        api: divide
    spec:
      containers:
      - name: divide
        image: an5asis/divide:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
