compute-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: math
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: compute-api
    task: math
---
apiVersion: v1
kind: Service
metadata:
  name: plus
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: compute-api
    task: plus
---
apiVersion: v1
kind: Service
metadata:
  name: minus
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: compute-api
    task: minus
---
apiVersion: v1
kind: Service
metadata:
  name: multiply
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: compute-api
    task: multiply
---
apiVersion: v1
kind: Service
metadata:
  name: divide
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: compute-api
    task: divide
