computes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: compute-api
spec:
  rules:
  - host: math.api
    http:
      paths:
      - path: /
        backend:
          serviceName: math
          servicePort: 30010
  - host: plus.api
    http:
      paths:
      - path: /
        backend:
          serviceName: plus
          servicePort: 30011
  - host: minus.api
    http:
      paths:
      - path: /
        backend:
          serviceName: minus
          servicePort: 30012
  - host: multiply.api
    http:
      paths:
      - path: /
        backend:
          serviceName: multiply
          servicePort: 30013
  - host: divide.api
    http:
      paths:
      - path: /
        backend:
          serviceName: divide
          servicePort: 30014
